--- a/res/layout/mainscreen_no_button_clicked_layout.xml
+++ b/res/layout/mainscreen_no_button_clicked_layout.xml
@@ -9,12 +9,30 @@
     tools:context=".mainscreen_no_button_clicked_layout" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/mainscreen_no_button_clicked_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="No Button Clicked"
+        android:text="@string/mainscreen_no_button_clicked_header_text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-    
+
+    <Button
+        android:id="@+id/change_mind_button"
+        android:layout_width="200dp"
+        android:layout_height="75dp"
+        android:layout_below="@+id/mainscreen_no_button_clicked_header"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="115dp"
+        android:text="@string/change_mind_button_text" />
+
+    <Button
+        android:id="@+id/maybe_later_button"
+        android:layout_width="200dp"
+        android:layout_height="75dp"
+        android:layout_alignLeft="@+id/change_mind_button"
+        android:layout_below="@+id/change_mind_button"
+        android:layout_marginTop="43dp"
+        android:text="@string/maybe_later_button_text" />
+
 </RelativeLayout>
